关键词提取spark程序计算完毕!

--- a/src/main/resources/hotwords.properties
+++ b/src/main/resources/hotwords.properties
@@ -1,1 +1,4 @@
-stopwords=./stopwords.txt
+stopwords=F:/intell_workspace/hotwords/src/main/resources/stopwords.txt
+# 0 代表内部语料库；1代表外部语料库,对应着idf_corpus_file文件
+idf_corpus_type=0
+idf_corpus_file=
