添加读写kafka信息

--- a/src/main/resources/hotwords.properties
+++ b/src/main/resources/hotwords.properties
@@ -2,3 +2,25 @@ stopwords=F:/intell_workspace/hotwords/src/main/resources/stopwords.txt
 # 0 代表内部语料库；1代表外部语料库,对应着idf_corpus_file文件
 idf_corpus_type=0
 idf_corpus_file=
+
+# kafka配置
+# 反序列
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# 序列化
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=org.apache.kafka.common.serialization.StringSerializer
+# kafka热词配置
+hotwords.bootstrap.servers=10.121.17.193:9092,10.121.17.194:9092,10.121.17.195:9092
+hotwords.group.id=12
+hotwords.enable.auto.commit=false
+hotwords.auto.commit.interval.ms=1000
+hotwords.max.poll.records=1000
+hotwords.session.timeout.ms=30000
+# latest
+hotwords.auto.offset.reset=earliest
+
+hotwords.topic.name=hotwords_test
+# 任务目录
+tempDir=/hotwords_v1/tempDir/
+taskDir=/hotwords_v1/taskDir/
