--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <version>2.3.1</version>
         </dependency>
 
+        <!--kafka-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
     </dependencies>
 
 
