添加读写hdfs信息

--- a/src/main/resources/hotwords.properties
+++ b/src/main/resources/hotwords.properties
@@ -21,6 +21,14 @@ hotwords.session.timeout.ms=30000
 hotwords.auto.offset.reset=earliest
 
 hotwords.topic.name=hotwords_test
+# hadoop
+fs.defaultFS=hdfs://amend
+dfs.nameservices=amend
+dfs.ha.namenodes.amend=carbigdata4,carbigdata5
+dfs.namenode.rpc-address.amend.carbigdata4=carbigdata4:9000
+# risbig15:9000
+dfs.namenode.rpc-address.amend.carbigdata5=carbigdata5:9000
+dfs.client.failover.proxy.provider.amend=org.apache.hadoop.hdfs.server.namenode.ha.ConfiguredFailoverProxyProvider
 # ÈÎÎñÄ¿Â¼
 tempDir=/hotwords_v1/tempDir/
 taskDir=/hotwords_v1/taskDir/
