添加测试性能文件

--- a/src/main/resources/hotwords.properties
+++ b/src/main/resources/hotwords.properties
@@ -29,6 +29,7 @@ dfs.namenode.rpc-address.amend.carbigdata4=carbigdata4:9000
 # risbig15:9000
 dfs.namenode.rpc-address.amend.carbigdata5=carbigdata5:9000
 dfs.client.failover.proxy.provider.amend=org.apache.hadoop.hdfs.server.namenode.ha.ConfiguredFailoverProxyProvider
-# 任务目录
-tempDir=/hotwords_v1/tempDir/
-taskDir=/hotwords_v1/taskDir/
+# 任务目录 #   /hotwords_v1/tempDir/
+tempDir=/hotwordNer/tempDir/
+# /hotwordNer/taskDir  /hotwords_v1/taskDir/
+taskDir=/hotwordNer/taskDir/
