--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <version>1.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
     </dependencies>
 
 
