--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
             <artifactId>spark-mllib_2.11</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.11</artifactId>
+            <version>2.3.1</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
 
         <!--kafka-->
         <dependency>
