--- a/src/main/resources/hotwords.properties
+++ b/src/main/resources/hotwords.properties
@@ -1,4 +1,6 @@
-stopwords=F:/intell_workspace/hotwords/src/main/resources/stopwords.txt
+hdfs.stopwords=hdfs://amend/hotwordNer/file/stopwords.txt
+# stopwords=F:/intell_workspace/hotwords/src/main/resources/stopwords.txt
+stopwords=/data/appRun/hotwordjava/data/stopwords.txt
 # 0 代表内部语料库；1代表外部语料库,对应着idf_corpus_file文件
 idf_corpus_type=0
 idf_corpus_file=
